<resources>
    <string name="app_name">MyFirstAppLogin</string>
    <string name="fieldLogin">Login</string>
    <string name="auto_password">Password</string>
    <string name="textLogin">Войти</string>
    <string name="textRegister">Зарегистрироваться</string>
    <string name="messageError">Ошибка ввода</string>
    <string name="email">Email</string>
    <string name="password_again">Password again</string>
    <string name="red_succcessfylly">Успешно</string>
    <string name="reg_error">Пользователь уже существует</string>
    <string name="error_Login_Password">Неверный Login или Password</string>
    <string name="logout">Logout</string>
</resources>
